Cycles: Each time you move an object with displacement shader, it's move up and up again #86601

Closed
opened 2021-03-15 21:25:54 +01:00 by AiSatan · 9 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.72

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-15 15:11, hash: 1b29e84c18
Worked: ~

Short description of error
I have some strange issue with object and displacement, each time I move an object with dispalcement it's go up. Anything what makes your object to redraw, will make it normal again.
I use optiX and latest studio drivers. I couldn't test it with other versions, I hope it's ok.

Exact steps for others to reproduce the error

you can use this file, go render move and just move object any axis

bug.blend

bug.mp4

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.72 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-15 15:11, hash: `1b29e84c18` Worked: ~ **Short description of error** I have some strange issue with object and displacement, each time I move an object with dispalcement it's go up. Anything what makes your object to redraw, will make it normal again. I use optiX and latest studio drivers. I couldn't test it with other versions, I hope it's ok. **Exact steps for others to reproduce the error** you can use this file, go render move and just move object any axis [bug.blend](https://archive.blender.org/developer/F9893287/bug.blend) [bug.mp4](https://archive.blender.org/developer/F9893264/bug.mp4)
Author

Added subscriber: @aisatan.ne

Added subscriber: @aisatan.ne

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This only seems to happen in 2.93.

This only seems to happen in 2.93.
Author

I'm not sure, should I create another issue, but I have a little similar problem with bevel node, in the way it can be fixed if you switch render mode and come back. Please take a look, it happens with optiX and Cuda as well.

It's just default cube (I have some booleans so it looks more obvious, but with simple cube and default scene is the same behavior) with simple shader and bevel node connected

Desktop 2021.03.17 - 19.36.43.02.mp4

I'm not sure, should I create another issue, but I have a little similar problem with bevel node, in the way it can be fixed if you switch render mode and come back. Please take a look, it happens with optiX and Cuda as well. It's just default cube (I have some booleans so it looks more obvious, but with simple cube and default scene is the same behavior) with simple shader and bevel node connected [Desktop 2021.03.17 - 19.36.43.02.mp4](https://archive.blender.org/developer/F9896648/Desktop_2021.03.17_-_19.36.43.02.mp4)
Kévin Dietrich self-assigned this 2021-03-24 10:07:02 +01:00

@aisatan.ne please open another bug report for this other issue.

@aisatan.ne please open another bug report for this other issue.
Author

Sure, I'll the link here as well https://developer.blender.org/T86880

Sure, I'll the link here as well https://developer.blender.org/T86880

This issue was referenced by 42198e9eb0

This issue was referenced by 42198e9eb03bdc5494c3717c6b1643539ef06231

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86601
No description provided.