intern/cycles/render/geometry.cpp
@@ -1917,9 +1917,12 @@ void GeometryManager::device_update(Device *device,
     }
   }
 
-  /* update the bvh even when there is no geometry so the kernel bvh data is still valid,
-   * especially when removing all of the objects during interactive renders */
-  bool need_update_scene_bvh = (scene->bvh == nullptr);
+  /* Update the BVH even when there is no geometry so the kernel's BVH data is still valid,
+   * especially when removing all of the objects during interactive renders.
+   * Also update the BVH if the transformations change, we cannot rely on tagging the Geometry
+   * as modified in this case, as we may accumulate displacement if the vertices do not also
+   * change. */
+  bool need_update_scene_bvh = (scene->bvh == nullptr || (update_flags & TRANSFORM_MODIFIED) != 0);
   {
     scoped_callback_timer timer([scene](double time) {
       if (scene->update_stats) {
